cohortAttend/force-app/main/default/objects/Attendee__c/fields/Group_2__c.field-meta.xml
<CustomField>
    <fullName>Group_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group 2</label>
    <type>Checkbox</type>
</CustomField>