cohortAttend/force-app/main/default/objects/Attendee__c/fields/Group_3__c.field-meta.xml
<CustomField>
    <fullName>Group_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group 3</label>
    <type>Checkbox</type>
</CustomField>