cohortAttend/force-app/main/default/objects/Attendee__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group 1</label>
    <type>Checkbox</type>
</CustomField>